MonetDB/src/mal/Tests/tst150.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## more complex typechecking, it should not complain at compile time
#command lookup(nme:str):bat[str,str] = CMDlookup;
!ERROR: address of 'CMDlookup' not found
command Admin.lookup(nme:str):bat[str,str] = CMDlookup;	#0:(lookup:bat[str,str])<-(nme:str)
#function sample(nme:str, val:any):bit;
#   b := lookup(nme); #find a bat
#   h := select(b,val,val);
#   t := count(h);
#   x := print(t);
#   y := print(val);
#end function;
function Admin.sample(nme:str,val:any):bit;	#0:(sample:bit)<-(nme:str)(val:any)
	b := Admin.lookup(nme);	#1:(b:bat[str,str])<-(nme:str)
	h := select(b,val,val);	#2 unknown:(h:any)<-(b:bat[str,str])(val:any)(val:any)
	t := count(h);	#3 unknown:(t:any)<-(h:any)
	x := print(t);	#4 unknown:(x:any)<-(t:any)
	y := print(val);	#5 unknown:(y:any)<-(val:any)
end function;	#6:
#
function Admin.main():int;	#0:(main:int)
	const.open();	#1:($1:void)
	const.deposit("user","Admin");	#2:($2:void)<-($3:str)($4:str)
	const.deposit("database","demo");	#3:($5:void)<-($6:str)($7:str)
	const.deposit("dbfarm","/ufs/mk/monet_5-0/Linux/../dbfarm/demo");	#4:($8:void)<-($9:str)($10:str)
	const.deposit("distribution","/ufs/mk/monet_5-0/Linux");	#5:($11:void)<-($12:str)($13:str)
	const.deposit("monetrc","/ufs/mk/.monet.conf");	#6:($14:void)<-($15:str)($16:str)
	const.deposit("architecture","i686-pc-linux-gnu");	#7:($17:void)<-($18:str)($19:str)
	const.deposit("version","5.0");	#8:($20:void)<-($21:str)($22:str)
	const.deposit("environment","unknown yet");	#9:($23:void)<-($24:str)($25:str)
	const.deposit("pi",3.147);	#10:($26:void)<-($27:str)($28:flt)
end function;	#11:
>